--- a/style.css
+++ b/style.css
@@ -151,62 +151,46 @@
     width: 150px;
     height: auto;
 }
-.services-section {
-    background: url('./media/images/backgroundservice.jpg');
-    /* height: 100vh; */
+.service-section-2 {
+    background:white;
     background-size: cover;
-    user-select: none;
+    padding-bottom: 50px;
+    background-position: left;
 }
-.service-row-one {
+.services-container {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
     justify-content: space-between;
 }
-.services-section {
-    /* text-align: center; */
-    padding: 50px 0px;
-    text-transform: uppercase;
+.services {
+    width: calc(33.33% - 20px);
+    text-align: center;
+    padding: 50px 50px;
+    /* border: 1px solid black; */
+    transition: all 1s ease;
+    cursor: pointer;
+    border-radius: 10px;
 }
-.service-row-one {
-    display: flex;
-    margin-top: 100px;
+.services:hover {
+    box-shadow: 0px 0px 30px #acd8ff    ;
+}
+.services img {
+    width: 75px
+}
+.services h2 {
+    font-size: 30px;
+    font-weight: bold
+}
+.service-section-2 .main-service-heading {
+    text-align: center;
+    text-transform: uppercase;
 }
 .main-service-heading {
-    font-size: 40px;
     text-align: center;
-}
-.service {
-    background: white;
-    width: 25%;
-    align-items: left;
-    padding: 15px;
-    align-items: center;
-    box-shadow: 0px 0px 5px 0.5px #ccc;
-    border-radius: 10px;
-    cursor: pointer;
-    user-select: none;
-    display: flex;
-    transition: all 1s ease;
 }
 
-.service:active {
-    box-shadow: inset -3px -3px 15px 0.5px #ccc;
-}
-.service:hover {
-    transform: scale(1.02);
-}
-.service .image-section img {
-    width: 60px;
-}
-.service-heading {
-    width: 100%;
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-    line-height: 1.3;
-    text-transform: uppercase;
-}
 .case-studies {
     background: white;
     height: 50vh;
@@ -215,6 +199,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    display: none;
 }
 
 .case-studies .service-row-one {
@@ -389,6 +374,9 @@ article {
     font-size: 45px;
     text-transform: uppercase;
 }
+.service-row-one a {
+    text-decoration: none;
+}
 
 
 
@@ -462,16 +450,7 @@ article {
     .business-we-own h2 {
         font-size: 42px;
     }
-    .service-row-one {
-        flex-direction: column;
-    }
-    .service {
-        width: 100%;
-        margin-top: 15px;
-    }
-    .service-row-one {
-        margin-top: 10px;
-    }
+   
     .case-studies {
         height: auto;
     }
@@ -497,6 +476,8 @@ article {
     }
     .testimonials-section {
         height: auto;
+        background: url('./media/images/testimonialsbackgroundmobile.jpg');
+        background-size: cover;
     }
     .testimonial-main-section {
         flex-direction: column;
@@ -509,5 +490,17 @@ article {
     .top-clients-work h2 {
         font-size: 30px;
     }
-   
+    .service-section-2 {
+        background: url('./media/images/servicebackgroundphone.jpg');
+        background-size: cover;
+        flex-direction: column;
+    }
+    .services-container {
+    flex-direction: column;
+   }
+   .services {
+    width: 100%;
+   }
   }
+
+  /* Testing Service Section */
